<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

<group android:checkableBehavior="single">


    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home_24"/>

    <item android:id="@+id/nav_setting"
        android:title="@string/setting"
        android:icon="@drawable/settings_24"/>

    <item android:id="@+id/nav_share"
        android:title="@string/share"
        android:icon="@drawable/share_24"/>


    <item android:id="@+id/nav_about"
        android:title="@string/about_us"
        android:icon="@drawable/about_24"/>
</group>

    <item android:title="">
        <menu>
            <item android:id="@+id/nav_layout"
                android:icon="@drawable/exit_to_app_24"
                android:title="@string/log_out"/>

        </menu>

    </item>
</menu>